# model-runner

./: CMakeLists.txt  Cargo.toml
examples/: simple_compute.rs
src/: tensor.rs
src/tensor/: operators.rs
